Fix controlsfx bug